<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">FocoFacil</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_quarta_feira">QUARTA-FEIRA</string>
    <string name="lbl_segunda">Segunda</string>
    <string name="lbl_301">301</string>
    <string name="lbl_cadastrar">Cadastrar</string>
    <string name="lbl_kewirausahaan">Kewirausahaan</string>
    <string name="lbl_configura_es">Configurações</string>
    <string name="lbl_domingo">DOMINGO</string>
    <string name="lbl_horas_da_aula">Horas da aula</string>
    <string name="msg_data_de_vencime">Data de Vencimento</string>
    <string name="lbl_email2">Email:</string>
    <string name="msg_cronograma_do_1">Cronograma do 1º semestre 2024</string>
    <string name="lbl_10_20_12_00">	10:20 - 12:00</string>
    <string name="msg_login_com_googl">Login com Google</string>
    <string name="msg_italojefer_gmai">Italojefer@gmail.com</string>
    <string name="msg_hoje_s_o_duas_a">Hoje são duas aulas teóricas</string>
    <string name="msg_n_o_possui_uma">Não possui uma conta? Registre-se</string>
    <string name="lbl_registre_se">Registre-se</string>
    <string name="lbl_embedded_system">Embedded System</string>
    <string name="msg_n_o_possui_uma2">Não possui uma conta?</string>
    <string name="lbl_segunda_feira">SEGUNDA-FEIRA</string>
    <string name="lbl_protocolos_web">Protocolos Web</string>
    <string name="lbl">************</string>
    <string name="lbl_senha2">Senha:</string>
    <string name="lbl_s_bado">SÁBADO</string>
    <string name="lbl_arquitetura_arm">Arquitetura ARM</string>
    <string name="lbl_sair">Sair</string>
    <string name="lbl_relaxar">Relaxar</string>
    <string name="lbl_ter_a_feira">TERÇA-FEIRA</string>
    <string name="lbl_assunto">Assunto</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_cadastro">Cadastro</string>
    <string name="lbl_quinta_feira">QUINTA-FEIRA</string>
    <string name="lbl_confirmar_senha">Confirmar Senha</string>
    <string name="lbl_aula">Aula</string>
    <string name="lbl_nova_senha">Nova senha</string>
    <string name="lbl_horas">Horas</string>
    <string name="lbl_dormir">Dormir</string>
    <string name="msg_confira_outros">Confira outros horários</string>
    <string name="lbl_conta">Conta</string>
    <string name="lbl_15_30_17_10">15:30 - 17:10</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_nome">Nome:</string>
    <string name="msg_cadastrar_com_g">Cadastrar com Google</string>
    <string name="msg_esqueceu_a_senh">Esqueceu a senha?</string>
    <string name="lbl_senha">Senha</string>
    <string name="lbl_ol">Olá</string>
    <string name="lbl_italo_jeferson">Italo Jeferson</string>
    <string name="lbl_sexta_feira">SEXTA FEIRA</string>
    <string name="lbl_senha_antiga">Senha antiga</string>
    <string name="lbl_aula_de_hoje">AULA DE HOJE</string>
    <string name="lbl_ou">OU</string>
    <string name="msg_notificar_taref">Notificar Tarefas Diárias</string>
    <string name="msg_sistemas_embarc">Sistemas Embarcados</string>
    <string name="msg_notificar_taref3">Notificar Tarefas Por Horário</string>
    <string name="lbl_jam">Jam</string>
    <string name="msg_notificar_taref2">Notificar Tarefas Semanais</string>
    <string name="lbl_ajuda">Ajuda</string>
    <string name="msg_10_de_outubro">10 de Outubro, 2022</string>
    <string name="msg_adicionar_class">Adicionar classe</string>
    <string name="lbl_usu_rio">Usuário</string>
    <string name="menu_user">Usuário</string>
    <string name="CandarioDialog">Abrir Calendário</string>
    <string name="open_nav">Abrir Navigation Drawer</string>
    <string name="close_nav">Fechar Navigation Drawer</string>
    <string name="default_web_client_id">579533834454-qt9ae8ddld3476lquv2bsp0k1bgmnv8j.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="infoCalendario">Clique Para Selecionar a Data:</string>
    <string name="infoSpinner">Clique Para Selecionar a Rotina:</string>
    <string name="infoHora">Clique Para Selecionar o Horário:</string>
    <string name="horaDialog">Horário</string>
    <string name="ok">Ok</string>
    <string name="channel2_notification_channel_id">canal_2_id</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="channel1_notification_channel_id">canal_1_id</string>
</resources>
