<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <FrameLayout android:id="@+id/frameDetalhesDia"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_25pxv"
        android:layout_marginEnd="@dimen/_30pxh"
        android:layout_marginStart="@dimen/_30pxh"
        android:layout_marginTop="@dimen/_52pxv"
        android:layout_width="match_parent" style="@style/groupStylewhite_A701">
        <LinearLayout android:id="@+id/linearColumngroup142"
            android:layout_gravity="top|start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearRowol"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearColumnol"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_weight="0.84"
                        android:layout_width="0dp" android:orientation="vertical">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtOl"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_width="wrap_content"
                            android:singleLine="true"
                            android:text="@string/lbl_ol"
                            style="@style/txtPoppinsbold16" tools:text="@string/lbl_ol"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtItaloJeferson"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@string/lbl_italo_jeferson"
                            style="@style/txtPoppinsbold24_1" tools:text="@string/lbl_italo_jeferson"/>
                    </LinearLayout>
                    <ImageView android:id="@+id/imageGroup142"
                        android:layout_height="@dimen/_50pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="@dimen/_50pxh"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_group142}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_group142"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumn10deoutubro"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_33pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecyan_900cornerRadius">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowdatadevencime"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_22pxh"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearColumnsegunda"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.86"
                        android:layout_width="0dp" android:orientation="vertical">
                        <LinearLayout android:gravity="start"
                            android:id="@+id/linearRowsegunda"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_width="match_parent" android:orientation="horizontal">
                            <TextView android:ellipsize="end"
                                android:id="@+id/txtDiaDaSemana"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.9"
                                android:layout_width="0dp"
                                android:singleLine="true"
                                android:text="@string/lbl_segunda"
                                style="@style/txtPoppinsbold24_2" tools:text="@string/lbl_segunda"/>
                            <View
                                android:background="@drawable/rectangle_bg_lime_600_radius_6"
                                android:id="@+id/viewEllipseThree"
                                android:layout_height="@dimen/_12pxh"
                                android:layout_marginBottom="@dimen/_2pxv"
                                android:layout_marginStart="@dimen/_66pxh"
                                android:layout_marginTop="@dimen/_21pxv" android:layout_width="@dimen/_12pxh"/>
                        </LinearLayout>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtDatadeVencime"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_marginTop="@dimen/_2pxv"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@string/msg_data_de_vencime"
                            style="@style/txtPoppinsmedium11_1" tools:text="@string/msg_data_de_vencime"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/linearColumnellipsetwo"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_4pxv"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_weight="0.14"
                        android:layout_width="0dp" android:orientation="vertical">
                        <View
                            android:background="@drawable/rectangle_bg_blue_a100_radius_6"
                            android:id="@+id/viewEllipseTwo"
                            android:layout_gravity="end"
                            android:layout_height="@dimen/_12pxh"
                            android:layout_marginStart="@dimen/_10pxh" android:layout_width="@dimen/_12pxh"/>
                        <View
                            android:background="@drawable/rectangle_bg_green_500_radius_11"
                            android:id="@+id/viewEllipseOne"
                            android:layout_gravity="start"
                            android:layout_height="@dimen/_22pxh"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_marginTop="@dimen/_11pxv" android:layout_width="@dimen/_22pxh"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt10deOutubro"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_22pxh"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/msg_10_de_outubro"
                    style="@style/txtPoppinssemibold14_1" tools:text="@string/msg_10_de_outubro"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtGroupEleven"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_13pxv"
                    android:layout_marginEnd="@dimen/_17pxh"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_2pxv"
                    android:paddingStart="@dimen/_8pxh"
                    android:paddingTop="@dimen/_3pxv"
                    android:singleLine="true"
                    android:text="@string/msg_hoje_s_o_duas_a"
                    style="@style/txtSolidRounded" tools:text="@string/msg_hoje_s_o_duas_a"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowauladehoje"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_28pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAULADEHOJE"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.56"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/lbl_aula_de_hoje"
                    style="@style/txtPoppinsbold20_7" tools:text="@string/lbl_aula_de_hoje"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt10deOutubroOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_weight="0.44"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/msg_10_de_outubro"
                    style="@style/txtPoppinsmedium11_2" tools:text="@string/msg_10_de_outubro"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnsistemasembarc"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius_1">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSistemasEmbarc"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_22pxh"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@string/msg_sistemas_embarc"
                    style="@style/txtPoppinsbold16_1" tools:text="@string/msg_sistemas_embarc"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtHoras"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_horas"
                    style="@style/txtPoppinsmedium11" tools:text="@string/lbl_horas"/>
                <EditText android:ellipsize="end"
                    android:hint="@string/lbl_10_20_12_00"
                    android:id="@+id/dataHoraEditText"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_10pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_4pxh"
                    android:singleLine="true"
                    android:textColorHint="@color/black_900"
                    style="@style/etPoppinsmedium12" tools:ignore="Autofill"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtProtocolosWeb"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_22pxh"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_protocolos_web"
                    style="@style/txtPoppinsbold16_1" tools:text="@string/lbl_protocolos_web"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtHorasOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_22pxh"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_horas"
                    style="@style/txtPoppinsmedium11" tools:text="@string/lbl_horas"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt15301710"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20pxv"
                    android:layout_marginEnd="@dimen/_22pxh"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_15_30_17_10"
                    style="@style/txtPoppinsmedium12" tools:text="@string/lbl_15_30_17_10"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnConfiraOutrosHorrios"
                    style="@style/btnSolidRounded_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_62pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_marginEnd="@dimen/_57pxh"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:paddingStart="@dimen/_17pxh"
                    android:paddingTop="@dimen/_7pxv"
                    android:paddingEnd="@dimen/_10pxh"
                    android:paddingBottom="@dimen/_7pxv"
                    android:singleLine="true"
                    android:text="@string/msg_confira_outros"
                    android:textAllCaps="false"
                    tools:text="@string/msg_confira_outros" />
            </LinearLayout>

        </LinearLayout>
        <FrameLayout android:id="@+id/frameBottombar"
            android:layout_gravity="bottom|start"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" style="@style/groupStyleblue_100cornerRadius">

            <LinearLayout
                android:id="@+id/linearRowhome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageHome"
                    android:layout_width="@dimen/_30pxh"
                    android:layout_height="@dimen/_30pxh"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_33pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_home"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_home" />

                <ImageView
                    android:id="@+id/imageClipboardList"
                    android:layout_width="@dimen/_30pxh"
                    android:layout_height="@dimen/_30pxh"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_80pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_clipboardlist"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_clipboardlist" />

                <ImageView
                    android:id="@+id/imageUser"
                    android:layout_width="@dimen/_30pxh"
                    android:layout_height="@dimen/_30pxh"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_79pxh"
                    android:layout_marginEnd="@dimen/_33pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_user"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_user" />
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
</layout>
    <!--tools:context=".DetalhesDia">-->

